appId: com.openioscad.app
---
- launchApp
- tapOn:
    id: "toolbar_script_button"
- assertVisible:
    id: "script_editor_view"
- tapOn:
    id: "toolbar_script_button"
- assertNotVisible:
    id: "script_editor_view"
