appId: com.openioscad.app
---
- launchApp
# Write a script with customizer variables
- tapOn:
    id: "toolbar_script_button"
- clearText
- inputText: |
    width = 40; // [10:100]
    cube([width, 20, 10]);
- tapOn:
    id: "toolbar_customizer_button"
- assertVisible: "width"
- assertVisible:
    id: "param_slider_width"
